# ai-agent

./: .env.example  .gitignore  README.md  ai-Agent.code-workspace  compose.cn.yml  compose.yml  main.py  mock.json  package-lock.json  package.json  pyrightconfig.json
AGENT_PROMPT/: xiaohongshu-content-publish.SKILL.md
app/: globals.css  page.tsx
integrations/: __init__.py  feishu_bitable.py  xhs_upload_pipeline.py
mcp_server/: .env.example  .gitignore  Dockerfile.mcp  README.md  main.py  pyproject.toml
mcp_server/AGENT_PROMPT/: xiaohongshu-direct-copywriting.SKILL.md  xiaohongshu-travel-summary.SKILL.md
mcp_server/data/: xhs_cache.db
mcp_server/json/: xhs_search_佛山美食.json  xhs_search_天津旅游.json  xhs_search_帮我写一篇深圳出发郴州的旅游攻略，内容尽量包含美食，交通，景点等.json  xhs_search_广州.json  xhs_search_广州北海旅游.json  xhs_search_广州旅游.json  xhs_search_广州景点盘点.json  xhs_search_广州美食推荐.json  xhs_search_深圳公园排行.json  xhs_search_深圳宝安公园推荐.json  xhs_search_深圳福田公园推荐.json  xhs_search_清远旅游.json  xhs_search_湛江周末旅游.json  xhs_search_贺州旅游.json
mcp_server/server/: constants.py
mcp_server/server/access/: __init__.py  gate_store.py  routes.py
mcp_server/server/chat/: __init__.py  chat_memory_db.py  memory_store.py  prompt_library_store.py  routes.py
mcp_server/server/notify/: __init__.py  email_sender.py
mcp_server/server/scheduler/: __init__.py  planning.py  store.py
mcp_server/server/search/: routes.py
mcp_server/server/xhs/: xhs_cover_image.py  xhs_note_cache.py  xhs_note_pipeline.py  xhs_playwright.py  xhs_scheduler.py  xhs_scheduler_state.py  xhs_search.py  xhs_task_store.py
(+67 files in other folders)
